    * variable TARGET_OS_SECOND_NAME defaults to os_second_name
    * Fixed list guid in interactive mode
    * Variable SEARCH_PATHS enables so set search paths in the yaml file.
    * improved reporting of bad checksum on windows.
    * Windows: robocopy might exit with error even if there are no errors. So error checking for robocopy is now level dependent.

    Changes to V9_test repository that do not effect code
    * 7ZA_CLIENT_PATH renamed WTAR_OPENER, the 7 probably caused problems on windows
    * All Mac rm commands in index were added the -f flags
    * DOWNLOAD_TOOL_PATH moved to index.yaml
    * Mac:Setting of .framewoks to be bundles is now done by a new version of setIcon.
    * CURRENT_OS_NAMES renamed __CURRENT_OS_NAMES__

    user visible changes, admin:
    * New command stage2svn
    * Exception is thrown if unknown admin command is called
    * up_repo_rev now accepts only one option: --config_file, repo_rev file to upload is
        created on the fly.
    * Changed fix_props command to read information from config file.
    * trans command new option --base-repo-rev instead of --config-file that supplied the value before
    * createlinks will remove the up2s3 stamp file - if there is any
    * up2s4 will upload .txt versions of .yaml|info|props files in the instl folder
        so these files can be displayed in a browser.
    * ROOT_LINKS_FOLDER renamed ROOT_LINKS_FOLDER_REPO. ROOT_LINKS_FOLDER will point to the links folder above all repositories
    * repo_rev file is saved to "$(ROOT_LINKS_FOLDER)/admin"
    * Adjusted createlinks to work on local path urls
    
    programmer visible changes:
    * Copy tools now accept a list of ignores and don't just assume .svn and *.symlink should be ignored
    * CopyToolMacRsync and CopyToolLinuxRsync now inherit from common CopyToolRsync
    * quoteme function is now quoteme_double and a new function is born: quoteme_single