@@ -161,6 +161,16 @@ class InstlInstanceBase(object):
                                         (?P<internal_identifier>\w*)
                                         __                  # dunder there
                                         """, re.VERBOSE)
+
+    def resolve_defined_paths(self):
+        self.search_paths_helper.add_search_paths(self.cvl.get_list("SEARCH_PATHS"))
+        for path_var_to_resolve in self.cvl.get_list("PATHS_TO_RESOLVE"):
+            if path_var_to_resolve in self.cvl:
+                resolved_path = self.instlInstance.search_paths_helper.find_file_with_search_paths(self.cvl.get_str(path_var_to_resolve), return_original_if_not_found=True)
+                self.cvl.set_variable(path_var_to_resolve, "resolve_defined_paths").append(resolved_path)
+
+
+
     @func_log_wrapper
     def read_defines(self, a_node):
         # if document is empty we get a scalar node
